--- a/css/main.css
+++ b/css/main.css
@@ -143,3 +143,75 @@ p.details {
   font-size: 1.4rem;
   margin: 0;
 }
+
+/* RIGHT COLUMN GALLERY */
+
+.right-col {
+  display: grid;
+  /* border: 1px solid lightsalmon; */
+  gap: 2.3em;
+  grid-template-columns: repeat(2, auto);
+  grid-template-areas:
+    "left ."
+    "left .";
+}
+
+.card {
+  border-radius: 0.8em;
+  padding: 1.1em;
+  display: flex;
+  align-items: end;
+  background-size: 150%;
+}
+
+.card1 {
+  grid-area: left;
+  background-image: url("../images/clothing1.jpg");
+  position: relative;
+}
+
+.card1:before {
+  position: absolute;
+  content: "";
+  background: url("../images/tag.svg");
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  top: 20px;
+  left: -30px;
+  pointer-events: none;
+}
+
+.card2 {
+  background-image: url("../images/clothing2.jpg");
+}
+
+.card3 {
+  background-image: url("../images/clothing3.jpg");
+}
+
+.card-details {
+  background-color: white;
+  border-radius: 0.6em;
+  padding: 2em;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-details a {
+  font-size: 1.6rem;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.card-details p {
+  font-size: 1.4rem;
+  margin: 0;
+}
+
+p.product-price {
+  font-size: 1.8rem;
+}
